tests/baselines/reference/unusedImports3.errors.txt
tests/cases/compiler/file2.ts(1,9): error TS6133: 'Calculator' is declared but its value is never read.


==== tests/cases/compiler/file1.ts (0 errors) ====
    export class Calculator {
        handleChar() {}
    }
    
    export function test() {
    
    }
    
    export function test2() {
    
    }
    
==== tests/cases/compiler/file2.ts (1 errors) ====
    import {Calculator, test, test2} from "./file1"
            ~~~~~~~~~~
!!! error TS6133: 'Calculator' is declared but its value is never read.
    
    test();
    test2();